--- a/src/assets/mixins.scss
+++ b/src/assets/mixins.scss
@@ -1,6 +1,6 @@
 $background: #626461;
 $surface: #10100F;
-$primary: #88C2CE;
+$primary: #ecff00;
 $text: #666666;
 $secondary: #03DAC6;
 $textSpan: #1a1a1a;
