--- a/src/assets/mixins.scss
+++ b/src/assets/mixins.scss
@@ -1,6 +1,9 @@
 $background: #626461;
 $surface: #10100F;
-$primary: #fc4c04;
+//$primary: #fc4c04;
+$primary: #4f80ea;
+//$primary: #023dce;
+//$primary: #1a5793;
 $text: #666666;
 $secondary: #03DAC6;
 $textSpan: #1a1a1a;
