--- a/src/style.css
+++ b/src/style.css
@@ -72,3 +72,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+* {
+  font-family: Verdana, sans-serif;
+
+}
