UPD: поменял цвета и добавил letter-spacing

--- a/src/assets/mixins.scss
+++ b/src/assets/mixins.scss
@@ -2,6 +2,7 @@ $background: #626461;
 $surface: #10100F;
 //$primary: #fc4c04;
 $primary: #4f80ea;
+$primaryText: #cacaca;
 //$primary: #023dce;
 //$primary: #1a5793;
 $text: #666666;
