--- a/src/assets/mixins.scss
+++ b/src/assets/mixins.scss
@@ -1,7 +1,22 @@
-$background: #626461;
+//$background: #626461;
+//$surface: #10100F;
+////$primary: #fc4c04;
+//$primary: #4f80ea;
+//$primaryText: #cacaca;
+////$primary: #023dce;
+////$primary: #1a5793;
+//$text: #666666;
+//$secondary: #03DAC6;
+//$textSpan: #1a1a1a;
+//$error: #B00020;
+//$info: #2196F3;
+//$success: #4CAF50;
+//$warning: #FB8C00;
+
+$background: #6b6b6b;
 $surface: #10100F;
 //$primary: #fc4c04;
-$primary: #4f80ea;
+$primary: #104f8f;
 $primaryText: #cacaca;
 //$primary: #023dce;
 //$primary: #1a5793;
