--- a/src/assets/mixins.scss
+++ b/src/assets/mixins.scss
@@ -20,7 +20,7 @@ $primary: #104f8f;
 $primaryText: #cacaca;
 //$primary: #023dce;
 //$primary: #1a5793;
-$text: #666666;
+$text: rgba(102, 102, 102, 0.8);
 $secondary: #03DAC6;
 $textSpan: #1a1a1a;
 $error: #B00020;
